--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     let feels = $("input[name=feels]:checked").val();
                     let place = $("input[name=place]:checked").val();
                     let eats = $("input[name=eats]:checked").val();
+                    // let name = get value from name input box
                     let pet = "null";
 
                     if(feels == "fluffy" && place == "forest" && eats == "veggies") {
@@ -34,7 +35,7 @@
                         pet = "opossum";
                     }
                     else if(feels == "fluffy" && place == "mountains" && eats == "veggies") {
-                        pet = "guinea pig";
+                        pet = "chinchilla";
                     }
                     else if(feels == "fluffy" && place == "mountains" && eats == "meat") {
                         pet = "cougar";
@@ -42,19 +43,40 @@
                     else if(feels == "fluffy" && place == "mountains" && eats == "anything") {
                         pet = "hyrax";
                     }
+                    // african savanna hare
+                    // mongoose
+                    // honey badger
                     else if(feels == "scaly" && place == "forest" && eats == "forest") {
-                        pet = "snake";
+                        pet = "green iguana";
                     }
-                    else if(feels == "other" && place == "forest" && eats == "meat") {
+                    // komodo dragon
+                    // blue-tongued skink
+                    // bog turtle
+                    // snapping turtle
+                    // western skink
+                    // leopard tortoise
+                    // rock python
+                    // armadillo
+                    // hedgehog
+                    // pig
+                    // woodpecker
+                    // moose
+                    else if(feels == "other" && place == "mountains" && eats == "meat") {
                         pet = "barn owl";
                     }
-                    
+                    // mountain frog
+                    // ostrich
+                    // tiger salamander
+                    // bushpig
+
+                    pet = pet.replace(/\s+/g, '-').toLowerCase();             
                     let output = "";
 
                     output += `<p>Your pet feels: ${feels}</p>`;
                     output += `<p>Your pet comes from: the ${place}</p>`;
                     output += `<p>Your pet eats: ${eats}</p>`;
                     output += `<p>Your pet is a: ${pet}!</p>`;
+                    // output += `<p>Your pet's name is: ${name}!</p>`;
 
                     $("#output").html(output);
 
@@ -83,7 +105,7 @@
             <p>Would you like your pet to come from...</p>
             <input type="radio" name="place" value="forest" required = "required"> the forest <br/>
             <input type="radio" name="place" value="mountains"> the mountains <br/>
-            <input type="radio" name="place" value="savannah"> the savannah <br/>
+            <input type="radio" name="place" value="savanna"> the savanna <br/>
         </div>
 
         <div id="pet_diet">
@@ -94,10 +116,12 @@
             <input type="radio" name="eats" value="anything"> an omnivore <br/>
         </div>
 
+        <!-- new question here -->
+
         <br/>
         <input type="submit" value="submit it!"/>
-        <div id="pet">Pet picture goes here</div>
         <div id="output">Output goes here!</div>
+        <div id="pet">Pet picture goes here</div>
     </form>
     </body>
 </html>
