took out unncessary text

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 
         <br/>
         <input type="submit" value="submit it!"/>
-        <div id="output">Output goes here!</div>
-        <div id="pet">Pet picture goes here</div>
+        <div id="output"></div>
+        <div id="pet"></div>
     </form>
     </body>
 </html>
