changing feels values

--- a/index.html
+++ b/index.html
@@ -86,30 +86,39 @@
                         pet = "armadillo";
                     }
                     else if(feels == "other" && place == "forest" && eats == "veggies") {
+                        feels = "spiky";
                         pet = "hedgehog";
                     }
                     else if(feels == "other" && place == "forest" && eats == "meat") {
+                        feels = "slimy";
                         pet = "true toad";
                     }
                     else if(feels == "other" && place == "forest" && eats == "anything") {
+                        feels = "bristly";
                         pet = "pig";
                     }
                     else if(feels == "other" && place == "mountains" && eats == "veggies") {
+                        feels = "bristly";
                         pet = "moose";
                     }
                     else if(feels == "other" && place == "mountains" && eats == "meat") {
+                        feels = "feathery";
                         pet = "barn owl";
                     }
                     else if(feels == "other" && place == "mountains" && eats == "anything") {
+                        feels = "slimy";
                         pet = "mountain frog";
                     }
                     else if(feels == "other" && place == "savanna" && eats == "veggies") {
+                        feels = "leathery";
                         pet = "elephant";
                     }
                     else if(feels == "other" && place == "savanna" && eats == "meat") {
+                        feels = "slimy";
                         pet = "tiger salamander";
                     }
                     else if(feels == "other" && place == "savanna" && eats == "anything") {
+                        feels = "feathery";
                         pet = "ostrich";
                     }
 
